# shopping-factes-extractor

./: .gitignore  QUICKSTART.md  README.md  architecture_plan.md  pyproject.toml  search_utils.py  streamlit_app.py  test_app.py
