[project]
name = "shopping-factes-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "serpapi>=0.1.5",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "ipykernel>=6.30.1",
]
